# clickhouse-monitoring

./: '  .dependency-cruiser.cjs  .dockerignore  .env  .env.example  .env.local.example  .eslintrc.json  .gitignore  .prettierignore  2026-05-30-092013-command-namegoalcommand-name.txt  BUG_FIXES_MEDIUM_PRIORITY.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CHART_COMPONENTS.md  CLAUDE.local.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  CONTRIBUTING.md  DRIZZLE_SETUP_COMPLETE.md  Dockerfile  ERROR_HANDLING.md  HEAD  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MEMORY_OPTIMIZATIONS.md  ORIG_HEAD  QUICKSTART_QUERY_CONFIG_V2.md  README.md  SECURITY_AUDIT.md  STATIC_MIGRATION_PLAN.md  TESTING.md  biome.json  bun.setup.ts  cloudflare-env.d.ts  commitlint.config.js  components.json  config.example.toml  cypress-real-events.d.ts  cypress.config.ts  (+39 more)
.antigravitycli/: 22e244f4-dd32-4907-a190-af352bf44417.json  3968c64a-e4ec-40e4-8967-942d6192875f.json
.claude/: ralph-loop.local.md  settings.json
.claude-plugin/: plugin.json
.cursor/: environment.json
.deepsec/: README.md  deepsec.config.ts  package.json  pnpm-lock.yaml
.design-sync/: NOTES.md  config.json  issue-agentstate-list-pagination.md
.github/: PULL_REQUEST_TEMPLATE.md  clickhouse-monitoring.service  cr.yaml  dependabot.yml  labeler.yml  release-migration-prompt.md  release-notes-prompt.md  release-notes-system-prompt.md  release-please-config.json
.husky/: commit-msg  pre-commit  pre-push
__mocks__/: clickhouse-client.js  clickhouse-client.ts  next-headers.js  next-headers.ts  next-navigation.js  next-navigation.ts
app/: background-jobs.tsx  background.tsx  context.tsx  error.cy.tsx  error.tsx  global-error.tsx  globals.css  host-provider-from-url.tsx  layout.tsx  loading.cy.tsx  loading.tsx  not-found.tsx  page.tsx  pageview.tsx
apps/: README.md
components/: TABLE_CLIENT_EXAMPLES.md  TABLE_CLIENT_GUIDE.md  app-sidebar.tsx  background-jobs.tsx  breadcrumb.tsx  chart-card.cy.tsx  chart-card.tsx  chart-warn-message.tsx  clickhouse-host-selector.tsx  clickhouse-host.tsx  client-only.tsx  command-palette.tsx  connection-status-badge.tsx  count-badge.tsx  dialog-content.tsx  dialog-sql.cy.tsx  dialog-sql.tsx  error-alert.cy.tsx  error-alert.tsx  error-boundary.tsx  github-heatmap-chart.cy.tsx  github-heatmap-chart.tsx  header-client.tsx  header.tsx  menu.tsx  (+39 more)
rust/ch-json/: Cargo.toml  README.md
rust/ch-json/src/: lib.rs
rust/ch-pivot/: Cargo.toml  README.md
rust/ch-pivot/src/: lib.rs
rust/monitor-core/: Cargo.toml
rust/monitor-core/src/: lib.rs  main.rs
tools/ch-monitor-cli/: Cargo.toml
tools/ch-monitor-cli/src/: main.rs
(+6172 files in other folders)
