[package]
name = "ch-json"
version = "0.1.0"
edition = "2021"
authors = ["duyet <bot@duyet.net>"]
description = "Ultra-fast raw JSON-each-row parsing and precision normalization for ClickHouse to prevent Javascript MAX_SAFE_INTEGER precision loss."
license = "MIT OR Apache-2.0"
repository = "https://github.com/chmonitor/chmonitor"
readme = "README.md"
keywords = ["clickhouse", "json", "precision", "normalization", "parser"]
categories = ["parser-implementations", "no-std"]
exclude = ["/.github"]
