[package]
name = "ch-monitor-cli"
version = "0.1.0"
edition = "2021"
description = "Standalone ClickHouse Monitoring CLI for clickhouse-monitoring API"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
dirs = "5"
ratatui = "0.28"
crossterm = "0.28"
